<resources>
    <string name="app_name">TestUserAdmin</string>
    <string name="login">login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="register">register</string>
    <string name="email">email</string>
    <string name="re_type_password">re-type password</string>
    <string name="home">HOME</string>
    <string name="produk">PRODUK</string>
    <string name="profile">PROFILE</string>
    <string name="item_name">item name</string>
    <string name="item_price">item price</string>
    <string name="beli">BELI</string>
    <string name="tukar_point">tukar point</string>
    <string name="hadiah">Hadiah</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="stock">Stock</string>
    <string name="upload">upload</string>
    <string name="cancel">cancel</string>
    <string name="nama_hadiah">nama hadiah</string>
    <string name="point_untuk_ditukar">point untuk ditukar</string>
    <string name="banyak_item">banyak item</string>
    <string name="update">Update</string>
    <string name="delete">delete</string>
    <string name="log_out">log out</string>
    <string name="really">Yakin Membeli Item ini ?</string>
    <string name="pilih_action">Pilih Action</string>
</resources>
