<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <EditText
        android:id="@+id/etNamaHadiah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nama_hadiah"
        android:layout_margin="10dp"
        android:inputType="text"/>
    <EditText
        android:id="@+id/etPoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/point_untuk_ditukar"
        android:layout_margin="10dp"
        android:inputType="number"/>
    <EditText
        android:id="@+id/etBanyakItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/banyak_item"
        android:layout_margin="10dp"
        android:inputType="number"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnUploadH"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/upload"
            android:textColor="#fff"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cancel"
            android:textColor="#fff"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"/>
    </LinearLayout>
</LinearLayout>