<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="10dp"
    >
    <TextView
        android:id="@+id/tvDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/really"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="22sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnBeli"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/beli"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:layout_marginEnd="5dp"
            />
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:layout_marginStart="5dp"
            />
    </LinearLayout>
</LinearLayout>