<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_user"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        />
    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        tools:text="@string/username"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginBottom="10dp"
        tools:text="@string/email"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/tvPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginBottom="10dp"
        tools:text="point"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        android:layout_margin="25dp"/>
</LinearLayout>