<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:padding="7dp">
    <LinearLayout
        android:id="@+id/llayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgMarket"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_market"
            android:scaleType="fitCenter"
            android:padding="5dp"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/item_name"
                android:textSize="16sp"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textColor="#000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvItemPrice"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/item_price"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/tvItemStock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:text="@string/item_price"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:textColor="#000"/>
            </LinearLayout>
            <Button
                android:id="@+id/btnBeli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:background="@color/colorPrimary"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/beli"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>